--- a/.gitignore
+++ b/.gitignore
@@ -1,19 +1,21 @@
-/target
-/classes
-/checkouts
-/loggs
-pom.xml
-pom.xml.asc
-*.jar
+**/*.orig
+**/*.swp
 *.class
-/.lein-*
-/.idea
-/.nrepl-port
+*.jar
 *~
+/.idea
+/.idea
+/.lein-*
+/.nrepl-port
+/checkouts
+/classes
+/loggs
 /resources/public/js
+/target
 /test/repetitions.txt
+Session.vim
 figwheel_server.log
 file-storage.dat
-/.idea
+pom.xml
+pom.xml.asc
 tango.iml
-
